--- a/iris.ipynb
+++ b/iris.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 94,
    "metadata": {
     "collapsed": true
    },
@@ -12,6 +12,159 @@
     "\n",
     "iris = load_iris()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "outputs": [],
+   "source": [
+    "X = iris.data\n",
+    "y = iris.target\n",
+    "\n",
+    "feature_names = iris.feature_names\n",
+    "target_names = iris.target_names"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# Splitting the data\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "outputs": [],
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "\n",
+    "knn = KNeighborsClassifier(n_neighbors=3)\n",
+    "knn.fit(X_train, y_train)\n",
+    "y_pred = knn.predict(X_test)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn import metrics\n",
+    "\n",
+    "print(metrics.accuracy_score(y_test, y_pred))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pred_species=['versicolor', 'virginica']\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample = [[3, 5, 4, 2], [2, 3, 5, 4]]\n",
+    "predictions = knn.predict(sample)\n",
+    "pred_species = [iris.target_names[p] for p in predictions]\n",
+    "print(f'{pred_species=}')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "['mlbrain.joblib']"
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import joblib\n",
+    "joblib.dump(knn, 'mlbrain.joblib')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pred_species=['versicolor', 'virginica']\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = joblib.load('mlbrain.joblib')\n",
+    "\n",
+    "sample = [[3, 5, 4, 2], [2, 3, 5, 4]]\n",
+    "predictions = model.predict(sample)\n",
+    "pred_species = [iris.target_names[p] for p in predictions]\n",
+    "print(f'{pred_species=}')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
